--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "sideEffects": false,
   "scripts": {
     "build": "remix build",
-    "dev": "remix dev"
+    "dev": "remix dev",
+    "db": "json-server --watch db.json --port 3001"
   },
   "dependencies": {
     "@remix-run/node": "^1.6.4",
     "@remix-run/react": "^1.6.4",
     "@remix-run/vercel": "^1.6.4",
     "@vercel/node": "^1.15.2",
+    "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
