--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "scripts": {
     "build": "remix build",
     "dev": "remix dev",
-    "db": "json-server --watch db.json --port 3001"
+    "prisma": "prisma"
   },
   "dependencies": {
     "@remix-run/node": "^1.6.4",
     "@remix-run/react": "^1.6.4",
     "@remix-run/vercel": "^1.6.4",
     "@vercel/node": "^1.15.2",
-    "json-server": "^0.17.0",
+    "@prisma/client": "4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -22,7 +22,8 @@
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.17",
     "eslint": "^8.15.0",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "prisma": "4.0.0"
   },
   "engines": {
     "node": ">=14"
